--- a/TAGjs/TAG.css
+++ b/TAGjs/TAG.css
@@ -22,10 +22,8 @@ body {
 #imageDisplay {
   display: block;
   margin: auto;
-  width: 50%;
-  height: 40%;
-  min-width: 95%;
-  min-height: 40%;
+  width: 95%;
+  height: 300px;
 }
 #audio {
   position:absolute;
@@ -41,12 +39,17 @@ body {
   vertical-align: text-bottom;
 }
 #outputBox {
+  width: 98%;
+  position:relative;
+  margin-left: auto;
+  margin-right: auto;
   border: 3px solid;
-  height: 35%;
+  height: 10em;
   font-family: reformedEllar;
   font-size: 250%;
   overflow-y: scroll;
   padding: 5px;
+  margin-bottom: 0.5em;
   text-indent: 1em;
 }
 #inputBackground {
@@ -70,4 +73,6 @@ footer {
   font-family: reformedEllar;
   text-align: center;
   font-size: 2em;
+  position: relative;
+  bottom: 0;
 }
