--- a/TAGjs/TAG.css
+++ b/TAGjs/TAG.css
@@ -44,7 +44,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   border: 3px solid;
-  height: 10em;
+  height: 400px;
   font-family: reformedEllar;
   font-size: 250%;
   overflow-y: scroll;
