--- a/TAGjs/TAG.css
+++ b/TAGjs/TAG.css
@@ -1,6 +1,11 @@
 body {
 
 }
+@keyframes emphasizeName {
+    0%   {color: black;}
+    50%  {color: grey;}
+    100% {color: black;}
+}
 @font-face {
   font-family: reformedEllar;
   src: url("Fonts/Reformed Ellar.ttf");
@@ -18,6 +23,10 @@ body {
   width: 100%;
   font-family: reformedEllar;
   font-size: 200%;
+}
+.emphasizeName {
+  animation-name: emphasizeName;
+  animation-duration: 0.5s;
 }
 #imageDisplay {
   display: block;
@@ -57,7 +66,7 @@ body {
 #outputBox p {
   text-indent: 0;
   margin-top: 0;
-  margin-bottom: 0.4em;
+  margin-bottom: 0.3em;
 
 }
 #inputBackground {
@@ -76,6 +85,7 @@ body {
   font-family: reformedEllar;
   font-size: 250%;
   outline: none;
+  text-indent: 3px;
 }
 footer {
   font-family: reformedEllar;
