--- a/TAGjs/TAG.css
+++ b/TAGjs/TAG.css
@@ -31,7 +31,7 @@ body {
 #imageDisplay {
   display: block;
   margin: auto;
-  width: 95%;
+  width: 90%;
   height: 30%;
 }
 #audio {
@@ -57,6 +57,7 @@ body {
   height: 35%;
   font-family: reformedEllar;
   font-size: 250%;
+  overflow-x: hidden;
   overflow-y: scroll;
   padding: 5px;
   margin-bottom: 0.5em;
