--- a/TAGjs/TAG.css
+++ b/TAGjs/TAG.css
@@ -68,7 +68,9 @@ body {
   text-indent: 0;
   margin-top: 0;
   margin-bottom: 0.3em;
-
+}
+#outputBox .userText {
+  
 }
 #inputBackground {
   position: relative;
