--- a/TAGjs/Games/Christmas/override.css
+++ b/TAGjs/Games/Christmas/override.css
@@ -36,6 +36,9 @@ body {
   color: black;
   font-family: custom;
 }
+#inputBox .userText {
+  color: dimgrey;
+}
 footer {
   color: black;
   font-family: custom;
