Robotics Adventure Update

--- a/TAGjs/Games/robotics/override.css
+++ b/TAGjs/Games/robotics/override.css
@@ -31,7 +31,7 @@ body {
   font-family: custom;
 }
 #outputBox .userText {
-  color: dimgrey;
+  color: MediumPurple;
 }
 #inputBackground {
   background-color: Indigo;
